<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="accion_mostrar">Mostrar Lugares</string>
    <string name="accion_preferencias">Preferencias</string>
    <string name="acerca_de">Acerca de</string>
    <string name="accion_salir">Salir</string>
    <string name="accion_settings">Settings</string>
    <string name="app_name">Mis lugares</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="nombre">Nombre:</string>
    <string name="Tipo">Tipo:</string>
    <string name="Direccion">Dirección:</string>
    <string name="Telefono">Telefono:</string>
    <string name="URL">Url:</string>
    <string name="Comentario">Comentario:</string>

</resources>
