
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:text="@string/accion_preferencias"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:text="@string/accion_mostrar"
        android:id="@+id/button2"
        android:onClick="lanzarVistasLugar"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:text="@string/acerca_de"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:onClick="lanzarAcercaDe" />

    <Button
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:text="@string/accion_salir"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal" />
</LinearLayout>